--- a/assets/css/jquery-ui.css
+++ b/assets/css/jquery-ui.css
@@ -525,7 +525,7 @@ button.ui-button::-moz-focus-inner {
 	overflow: hidden;
 }
 .ui-progressbar .ui-progressbar-value {
-	margin: -1px;
+	/* margin: -1px; */
 	height: 100%;
 }
 .ui-progressbar .ui-progressbar-overlay {
@@ -807,7 +807,13 @@ body .ui-tooltip {
 }
 .ui-widget-header {
 	border: 1px solid #aaaaaa;
-	background: #cccccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x;
+	/* background: #cccccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x; */
+	background-image: -ms-linear-gradient(top left, #97CB03 0%, #6A8620 100%); /* IE10 Consumer Preview */ 
+	background-image: -moz-linear-gradient(top left, #97CB03 0%, #6A8620 100%); /* Mozilla Firefox */ 
+	background-image: -o-linear-gradient(top left, #97CB03 0%, #6A8620 100%); /* Opera */ 
+	background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #97CB03), color-stop(1, #6A8620)); /* Webkit (Safari/Chrome 10) */ 
+	background-image: -webkit-linear-gradient(top left, #97CB03 0%, #6A8620 100%); /* Webkit (Chrome 11+) */ 
+	background-image: linear-gradient(to bottom right, #97CB03 0%, #6A8620 100%); /* W3C Markup, IE10 Release Preview */ 
 	color: #222222;
 	font-weight: bold;
 }
