--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,12 +267,11 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .forgot-form {margin-top:20px;}
 .forgot-form input[type="text"] {border:1px solid #bebdbd; width:261px; height:27px;}
 
-.register form {margin-left:84px; padding-top:20px;}
+.register form {/*margin-left:84px;*/ padding-top:20px;}
 .register form ul li {margin-bottom:10px;}
 .register form ul li label {margin-bottom:5px;}
 .register form ul li:nth-child(7) input {float:left; margin-right:5px;}
 .register div label, .register div input {float:left; margin-right:5px;}
-.register form ul li input[type="text"], .register form ul li input[type="password"] {border:1px solid #bebdbd; box-shadow: inset 0 2px 10px #e7e7e5; -webkit-box-shadow: inset 0 2px 10px #e7e7e5; -moz-box-shadow: inset 0 2px 10px #e7e7e5; width:250px;}
 
 #successful-message {border:3px solid #27f82a; text-align:center; margin-top:30px; padding:10px 0;}
 
