--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,7 +320,8 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 .lift-seat-available p {text-align:center; margin-bottom:15px;}
 .lift-seat-available ul {margin-left:40px;}
-.lift-seat-available ul li {display:inline-block; margin: 0 10px 10px 0;}
+.lift-seat-available ul li {position:relative; display:inline-block; margin: 0 10px 10px 0;}
+.lift-seat-available ul li span {position:absolute; display:block; background: url('../images/page_template/image-mask.png') no-repeat; top:0; left:0; width:65px; height:66px;}
 
 .lift-price {text-align:right; font-size:2em; margin:20px 0;}
 
