--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .login-form .password i {float:right; display:block; background:url('../images/page_template/icon_key_medium.png') no-repeat; margin-right:10px; width:27px; height:17px;}
 
 .login-form input[type="submit"] {background: #92bd3a; color:#fff; font-weight:bold; font-size:1.5em; border:none; margin-bottom:10px; width:100%; height:40px;}
-.login-fb {border:none; background: #428bca url('../images/page_template/icon_fb_login.png') no-repeat; color:#fff; font-weight:bold; font-size:1.4em; padding-left:40px; margin-bottom:20px; width:100%; height:40px;}
+.login-fb {display:block; border:none; background: #428bca url('../images/page_template/icon_fb_login.png') no-repeat; color:#fff !important; font-weight:bold; font-size:1.4em; text-decoration:none !important; padding: 10px 0 0 40px; margin-bottom:20px; width:100%; height:40px;}
 
 
 /*.forgot-form {margin:0 auto; width:312px;}*/
