--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,6 +358,43 @@ footer .pull-right .fl span:last-child {color:#678222;}
 #passenger-calendar .pcal-body ul li {padding:10px;}
 #passenger-calendar .pcal-body ul li:nth-child(odd) {background:#f5f5f5;}
 
+.passenger-detail-information .fl h3 span {color:#678222;}
+.passenger-detail-information .fl h3 {line-height: .5em;}
+
+.passenger-user {border:1px solid #dfdede; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:10px;}
+.p-u-heading {margin-bottom:10px;}
+.passenger-profile-img {margin-right:10px;}
+.passenger-profile-img img {border-radius: 7px;}
+
+.passenger-info {font-size:1.4em;}
+.passenger-info ul li {margin-bottom:5px;}
+
+.send-message-to {
+	float:left;
+	display:block;
+	background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* IE10 Consumer Preview */
+	background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Mozilla Firefox */
+	background-image: -o-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Opera */
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #E0E0E0)); /* Webkit (Safari/Chrome 10) */ 
+	background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Webkit (Chrome 11+) */ 
+	background-image: linear-gradient(to bottom, #FFFFFF 0%, #E0E0E0 100%); /* W3C Markup, IE10 Release Preview */ 
+	color:#333;
+	border:1px solid #ccc;
+	border-radius:4px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px;
+	-ms-border-radius:4px;
+	margin-right:10px;
+	padding:4px 12px;
+	width:135px;
+}
+.send-message-to:hover {border:1px solid #adadad; text-decoration:none;}
+
+.passenger-message textarea {resize:none;}
+.error-field {border:1px solid #ff0000;}
+
+#invite_lift input[type="text"]{outline:none;}
+
 
 
 
