--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ footer .pull-left {text-transform:uppercase; margin-bottom:25px;}
 footer .pull-left .fl {margin-right:20px;}
 footer .pull-left a {color:#050505; font-size:.9em;}
 footer .pull-left a:hover {text-decoration:none;}
+footer .pull-left h5 {font-weight:bold;}
 
 footer .pull-right {text-transform:uppercase; text-align:center; margin-top:14px;}
 footer .pull-right .fl {margin-left:32px;}
@@ -283,9 +284,9 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .btn-create-lift {color:#000; text-align:center; padding-top:6px; margin-top:13px;}
 .btn-create-lift:hover {text-decoration:none;}
 
-.lift-listing ul {width:850px;}
-.lift-listing ul li { float:left; background: #f2f1f0; border-radius:5px; margin: 0 40px 33px 0; width:250px;}
-.lift-listing ul li:nth-child(3n+3) { margin-right: 0;}
+.lift-listing ul {/*width:850px;*/}
+.lift-listing ul li { float:left; background: #f2f1f0; border-radius:5px; margin: 0 8px 33px 0; width:250px;}
+.lift-listing ul li:nth-child(4n+4) { margin-right: 0;}
 .lift-listing ul li p {color:#678222; padding: 5px 8px;}
 .lift-listing ul li div {margin:7px 10px}
 .lift-listing ul li div label, .lift-listing ul li div span {float:left;}
@@ -295,6 +296,9 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .lift-listing ul li a {color:#000;}
 .lift-listing ul li a:hover {text-decoration:none;}
 
+#choose-date ul li {margin-bottom:10px;}
+#choose-date ul li div label {margin-right:16px; width: 65px;}
+
 #booking ul li {margin-bottom:15px;}
 #booking ul li div {position:relative;}
 #booking ul li div.seat-taken label:first-child {margin-left:0;}
@@ -302,6 +306,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 #booking ul li label, #quick_booking form ul li span {display:block; float:left;}
 #booking ul li label {width:120px;}
 #booking ul li textarea {resize:none; height:100px;}
+
 
 .request_form input {margin-bottom:20px;}
 
@@ -328,6 +333,36 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .lift-price {text-align:right; font-size:2em; margin:20px 0;}
 
 .btn-book-now {text-align:right; margin-top:10px;}
+
+
+
+
+/***** [Lift Create - Page] *****/
+.lift-place p {
+	color:#333;
+	background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* IE10 Consumer Preview */
+	background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Mozilla Firefox */
+	background-image: -o-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Opera */
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #E0E0E0)); /* Webkit (Safari/Chrome 10) */ 
+	background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E0E0E0 100%); /* Webkit (Chrome 11+) */ 
+	background-image: linear-gradient(to bottom, #FFFFFF 0%, #E0E0E0 100%); /* W3C Markup, IE10 Release Preview */ 
+	font-size:14px;
+	cursor:pointer;
+	border:1px solid #ccc;
+	border-radius: 4px;
+	padding:6px 12px;
+}
+
+.lift-place p:hover {border:1px solid #adadad;}
+.lift-search {display:none; background:#fff; border-radius: 2px 2px 5px 5px; border:1px solid #adadad; padding:10px;}
+.lift-search input {outline:none; border-radius: 5px; border:1px solid #adadad; padding:0 5px; width:100%; height:30px;}
+
+.l-s-done {float:right; background:#47a447; color:#fff; font-size:14px; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; margin-top:5px; padding:5px 20px;}
+.l-s-done:hover {color:#fff; text-decoration:none;}
+
+
+
+
 
 /***** [Passenger] *****/
 .passenger-search form ul {text-align:center;}
@@ -357,6 +392,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 #passenger-calendar .pcal-header .prev {display:block; background:url('../images/page_template/cal_nav.png') no-repeat 0 0; width:19px; height:19px;}
 #passenger-calendar .pcal-header .next {display:block; background:url('../images/page_template/cal_nav.png') no-repeat -19px 0; width:19px; height:19px;}
 #passenger-calendar .pcal-header .pcal-month {text-align:center; font-size:1.4em; width:310px; /*width:210px;*/}
+#passenger-calendar .pcal-body {overflow-x:hidden; overflow-y:auto; height:220px;}
 #passenger-calendar .pcal-body ul li {word-break:break-all; padding:10px; width:370px;}
 #passenger-calendar .pcal-body ul li:nth-child(odd) {background:#f5f5f5;}
 
@@ -676,7 +712,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
  =================== */
 /*Customize Checkbox*/
 .lift-available {background: url("../images/page_template/blank_image.png") no-repeat; display: inline-block; position: relative; z-index: 1; top: 3px; width: 65px; height: 66px;}
-.lift-available.selected{ background: url("../images/user_image.jpg") no-repeat; }
+/*.lift-available.selected{ background: url("../images/user_image.jpg") no-repeat; }*/
 .lift-available input[type="checkbox"]{
 	margin: 0;
 	position: absolute;
