--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -560,7 +560,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .profile-nav ul li { cursor: pointer; background: #75ca30; border-right:1px solid #759f52;}	
 .profile-nav ul li a { display:block; color:#fff; text-transform:uppercase; border-bottom:1px solid #181e13; padding:10px; }
 .profile-nav ul li a i { float:right; display:block; background: url('../images/page_template/tooltip_bg_arrow.png') no-repeat; margin-top:5px; width:10px; height:9px;}
-.profile-nav ul li ul { display: none; border:1px solid #919191; width:168px; }
+.profile-nav ul li ul { display: none; border:1px solid #919191; width:170px; }
 .profile-nav ul li ul li {background:#eff0ee; padding:0; border-top:1px solid #919191; padding:5px 10px;}
 .profile-nav ul li ul li:first-child {border-top:none;}
 .profile-nav ul li ul li a {border:none; color:#75ca30;}
@@ -708,7 +708,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 
 /* ====================
  * Checkbox and Radio
- =================== */
+ * ================= */
 /*Customize Checkbox*/
 .lift-available {background: url("../images/page_template/blank_image.png") no-repeat; display: inline-block; position: relative; z-index: 1; top: 3px; width: 65px; height: 66px;}
 /*.lift-available.selected{ background: url("../images/user_image.jpg") no-repeat; }*/
@@ -744,3 +744,119 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	-khtml-opacity: 0;
 	-moz-opacity: 0;
 } 
+
+
+
+
+/* ================
+ * Table Plugin
+ * ============= */
+.table-advance tr td { vertical-align: middle !important; }
+
+.no-border { border-bottom: none; }
+
+.dataTables_length , .dataTables_filter{ padding:15px; }
+.dataTables_info{ padding:0 15px; }
+
+.dataTables_length select { width: 65px; padding:5px 8px; }
+.dataTables_length label, .dataTables_filter label { font-weight: 300; }
+
+.dataTables_filter { float: right; }
+.dataTables_filter label { width: 100%; }
+.dataTables_filter label input { width: 78%; }
+
+.border-top { border-top: 1px solid #ddd; }
+
+.dataTables_paginate.paging_bootstrap.pagination li { float: left; margin: 0 1px; border: 1px solid #ddd; border-radius: 3px; -webkit-border-radius: 3px; }
+.dataTables_paginate.paging_bootstrap.pagination li.disabled a{ color: #c7c7c7; }
+.dataTables_paginate.paging_bootstrap.pagination li a{ color: #797979; padding: 5px 10px; display: inline-block; }
+.dataTables_paginate.paging_bootstrap.pagination li:hover a, .dataTables_paginate.paging_bootstrap.pagination li.active a{ color: #797979; background: #eee; border-radius: 3px; -webkit-border-radius: 3px; }
+.dataTables_paginate.paging_bootstrap.pagination { float: right; margin-right: 15px; margin-top: -5px; margin-bottom: 15px; }
+
+.dataTable tr:last-child { border-bottom: 1px solid #ddd; } 
+
+
+
+
+div.dataTables_length label { float: left; text-align: left; }
+div.dataTables_length select { width: 75px; }
+div.dataTables_filter label { float: right; }
+div.dataTables_info { padding-top: 8px; }
+div.dataTables_paginate { float: right; margin: 0; }
+
+table.table { clear: both; margin-bottom: 6px !important; max-width: none !important; }
+table.table thead .sorting,
+table.table thead .sorting_asc,
+table.table thead .sorting_desc,
+
+table.table thead .sorting_asc_disabled,
+table.table thead .sorting_desc_disabled { cursor: pointer; *cursor: hand; }
+
+table.table thead .sorting { background: url('images/sort_both.png') no-repeat center right; }
+
+table.table thead .sorting_asc { background: url('images/sort_asc.png') no-repeat center right; }
+table.table thead .sorting_desc { background: url('images/sort_desc.png') no-repeat center right; }
+
+table.table thead .sorting_asc_disabled { background: url('images/sort_asc_disabled.png') no-repeat center right; }
+table.table thead .sorting_desc_disabled { background: url('images/sort_desc_disabled.png') no-repeat center right; }
+
+table.dataTable th:active { outline: none; }
+
+
+
+
+/* Scrolling */
+div.dataTables_scrollHead table { margin-bottom: 0 !important; border-bottom-left-radius: 0; border-bottom-right-radius: 0; }
+div.dataTables_scrollHead table thead tr:last-child th:first-child,
+div.dataTables_scrollHead table thead tr:last-child td:first-child { border-bottom-left-radius: 0 !important; border-bottom-right-radius: 0 !important; }
+div.dataTables_scrollBody table { border-top: none; margin-bottom: 0 !important; }
+
+div.dataTables_scrollBody tbody tr:first-child th,
+div.dataTables_scrollBody tbody tr:first-child td { border-top: none; }
+
+div.dataTables_scrollFoot table { border-top: none; }
+
+
+
+
+/* TableTools styles */
+.table tbody tr.active td, .table tbody tr.active th { background-color: #08C; color: white; }
+.table tbody tr.active:hover td, .table tbody tr.active:hover th { background-color: #0075b0 !important; }
+
+.table-striped tbody tr.active:nth-child(odd) td,
+.table-striped tbody tr.active:nth-child(odd) th { background-color: #017ebc; }
+
+table.DTTT_selectable tbody tr { cursor: pointer; *cursor: hand; }
+
+div.DTTT .btn { color: #333 !important; font-size: 12px; }
+div.DTTT .btn:hover { text-decoration: none !important; }
+
+
+ul.DTTT_dropdown.dropdown-menu a { color: #333 !important; /* needed only when demo_page.css is included */ }
+ul.DTTT_dropdown.dropdown-menu li:hover a { background-color: #0088cc; color: white !important; }
+
+
+
+
+/* TableTools information display */
+div.DTTT_print_info.modal { height: 150px; margin-top: -75px; text-align: center; }
+div.DTTT_print_info h6 { font-weight: normal; font-size: 28px; line-height: 28px; margin: 1em; }
+div.DTTT_print_info p { font-size: 14px; line-height: 20px; }
+
+
+
+/* FixedColumns styles */
+div.DTFC_LeftHeadWrapper table,
+div.DTFC_LeftFootWrapper table,
+table.DTFC_Cloned tr.even { background-color: white; }
+
+div.DTFC_LeftHeadWrapper table { margin-bottom: 0 !important; border-top-right-radius: 0 !important; border-bottom-left-radius: 0 !important; border-bottom-right-radius: 0 !important; }
+div.DTFC_LeftHeadWrapper table thead tr:last-child th:first-child,
+div.DTFC_LeftHeadWrapper table thead tr:last-child td:first-child { border-bottom-left-radius: 0 !important; border-bottom-right-radius: 0 !important; }
+
+div.DTFC_LeftBodyWrapper table { border-top: none; margin-bottom: 0 !important; }
+
+div.DTFC_LeftBodyWrapper tbody tr:first-child th,
+div.DTFC_LeftBodyWrapper tbody tr:first-child td { border-top: none; }
+
+div.DTFC_LeftFootWrapper table { border-top: none; } 
