--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,10 +42,22 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px white inset; }
 
 #main-wrapper {padding-bottom:127px;}
 
-.login-status-wrapper {background:#7aa508; margin-bottom:1px; padding-top:5px; height:25px;}
+.login-status-wrapper {background:#7aa508; margin-bottom:1px; padding-top:5px; height:27px;}
 .login-status {color:#bbfb04; text-align:right;}
 .login-status a {color:#bbfb04;}
 .logo-nav {margin: 0 auto; width:1024px;}
+
+.login-link {background:#fff600; color:#000 !important; border-radius:2px; padding:2px 5px;}
+.login-link:hover {text-decoration:none;}
+.login {float:right; position:relative;}
+.login ul {position:absolute; background:#fff600; border-radius:0px 0px 5px 5px; text-align:left; z-index:10;}
+.login ul li {border-bottom:1px solid #ccbe45;}
+.login ul li:nth-child(4) {border:none;}
+.login ul li a {display:block; color:#000; padding:4px 10px;}
+.login ul li a:hover {text-decoration:none;}
+
+.try-it-free {background:#fff600; color:#000 !important; border-radius:2px; padding:2px 5px;}
+.try-it-free:hover {text-decoration:none;}
 
 header nav {margin:30px 0 2px;}
 header nav ul li {float:left; color:#050505;}
@@ -273,6 +285,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 .register form ul li label {margin-bottom:5px;}
 .register form ul li:nth-child(7) input {float:left; margin-right:5px;}
 .register div label, .register div input {float:left; margin-right:5px;}
+.register form ul li label a:hover {text-decoration:none;}
 
 #successful-message {border:3px solid #27f82a; text-align:center; margin-top:30px; padding:10px 0;}
 
@@ -731,7 +744,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 }
 
 /*Customize Radio*/
-.custom-radio{ display: inline-block; position: relative; z-index: 1; top: 3px; background: url("../images/page_template/btn_radio.png") no-repeat 0 0; width: 14px; height: 13px; }
+.custom-radio{ display: inline-block; position: relative; z-index: 1; top: 3px; background: url("../images/page_template/btn_radio.png") no-repeat 0 0; margin-right:5px; width: 14px; height: 13px; }
 .custom-radio.selected{ background: url("../images/page_template/btn_radio.png") no-repeat 0 -13px; }
 .custom-radio input[type="radio"]{
 	margin: 1px;
