--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,24 +129,6 @@ footer .pull-right .fl span:last-child {color:#678222;}
  ================== */
 .success-message {background: #8aff73; border:1px solid #368714; padding:10px; width:100%;}
 .success-message p {background: url('<?php echo base_url('assets/images/page_template')?>/icon_check_success.png') no-repeat; color:#378b15; font-size:1.3em; padding: 15px 0 0 70px; height:50px;} 
-.btn-gray {
-	color:#656565;
-	font-family: 'quicksandregular';
-	font-weight:bold;
-	background-image: -ms-linear-gradient(top, #FFFFFF 0%, #CDCECE 100%); /* IE10 Consumer Preview */ 
-	background-image: -moz-linear-gradient(top, #FFFFFF 0%, #CDCECE 100%); /* Mozilla Firefox */ 
-	background-image: -o-linear-gradient(top, #FFFFFF 0%, #CDCECE 100%); /* Opera */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #CDCECE)); /* Webkit (Safari/Chrome 10) */  
-	background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #CDCECE 100%); /* Webkit (Chrome 11+) */ 
-	background-image: linear-gradient(to bottom, #FFFFFF 0%, #CDCECE 100%);	/* W3C Markup, IE10 Release Preview */
-	border: 1px solid #909090;
-	border-radius: 8px;
-	-webkit-border-radius: 8px;
-	-moz-border-radius: 8px;
-	-ms-border-radius: 8px;
-	padding:10px 8px;
-}
-.btn-gray:hover {text-decoration:none; color:#656565;}
 .btn-search {
 	background: url('../images/page_template/icon_magnify.png') no-repeat;
 	background: url('../images/page_template/icon_magnify.png') no-repeat, -ms-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* IE10 Consumer Preview */ 
@@ -165,21 +147,26 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	height:36px;
 }
 .btn-advance {
+	display:block;
 	background: -ms-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* IE10 Consumer Preview */ 
 	background: -moz-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* Mozilla Firefox */ 
 	background: -o-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* Opera */ 
 	background: -webkit-gradient(linear, left top, right bottom, color-stop(0, #FFF254), color-stop(1, #FFCF04)); /* Webkit (Safari/Chrome 10) */ 
 	background: -webkit-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* Webkit (Chrome 11+) */ 
 	background: linear-gradient(to bottom right, #FFF254 0%, #FFCF04 100%); /* W3C Markup, IE10 Release Preview */ 
+	color:#000;
 	font-size:1.5em;
 	border:none;
 	border-radius:7px;
 	-webkit-border-radius:7px;
 	-moz-border-radius:7px;
 	-ms-border-radius:7px;
+	margin-left:5px;
+	padding:5px 10px;
 	width:148px;
 	height:36px;	
 }
+.btn-advance:hover {color:#000; text-decoration:none;}
  
 .slideshow {margin-top:10px;}
 .slideshow ul { position: relative; list-style: none; overflow: hidden; width: 100%; padding: 0; margin: 0; height:500px;}
