--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -57,7 +57,7 @@ h2.demo-text{font-family: 'Roboto', sans-serif!important; font-size:45px; font-w
 #menuBarDiv .dropdown-toggle{ font-size:14px; }
 #menuBarDiv .dropdown-toggle .caret{ margin-left:5px; border-top-color:#999; }
 #menuBarDiv a.btn{position:relative; margin-bottom:3px;}
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{height:auto; margin-bottom:10px;}
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{/*height:auto;*/ margin-bottom:10px;}
   
 #statusbar{ min-height:30px; border-radius:0 0 3px  3px; border-top:none; line-height:30px; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); }
 #statusbar .label{ float:right; margin:6px 10px 0 0; background:#BBB; text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25); padding: 2px 4px; font-size: 11.844px; line-height:14px; } 
